--- a/ref-getting-help.html
+++ b/ref-getting-help.html
@@ -13,6 +13,7 @@
 
 <title>Getting Help</title>
 
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -478,13 +479,13 @@ div.tocify {
       <a href="c8-mle.html">Oct 20: Optimization &amp; MLE</a>
     </li>
     <li>
-      <a href="c9-wtp-simulation.html">Oct 27: WTP &amp; Simulations</a>
+      <a href="c9-uncertainty.html">Oct 27: Uncertainty</a>
     </li>
     <li>
       <a href="c10-doe.html">Nov 03: DOE &amp; Power Analysis</a>
     </li>
     <li>
-      <a href="c12-uncertainty.html">Nov 17: Uncertainty</a>
+      <a href="c12-wtp-simulation.html">Nov 17: WTP &amp; Simulations</a>
     </li>
     <li>
       <a href="c14-heterogeneity.html">Dec 01: Heterogeneity</a>
@@ -519,16 +520,16 @@ div.tocify {
       <a href="r4-utility-models.html">Oct 06: Utility Models (Due 10/12)</a>
     </li>
     <li>
-      <a href="r5-estimation.html">Oct. 13: Estimation (Due 10/19)</a>
+      <a href="r5-estimation.html">Oct 13: Estimation (Due 10/19)</a>
     </li>
     <li>
-      <a href="r6-wtp-simulation.html">Oct 20: WTP &amp; Simulations (Due 10/26)</a>
+      <a href="r6-uncertainty.html">Oct 20: Uncertainty (Due 10/26)</a>
     </li>
     <li>
       <a href="r7-doe.html">Oct 27: Design of Experiment (Due 11/02)</a>
     </li>
     <li>
-      <a href="r8-uncertainty.html">Nov 10: Uncertainty (Due 11/16)</a>
+      <a href="r8-wtp-simulation.html">Nov 10: WTP &amp; Simulations (Due 11/16)</a>
     </li>
     <li>
       <a href="r9-heterogeneity.html">Nov 17: Heterogeneity (Due 11/30)</a>
@@ -709,8 +710,8 @@ div.tocify {
 </div>
 
 
-<div id="slack" class="section level1">
-<h1><span class="header-section-number">1</span> Slack</h1>
+<div id="slack" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Slack</h1>
 <p>All course communication will be managed through <a href="https://emse-madd-f21.slack.com">Slack</a>. A link to sign up for the course slack page can be found on the one (and only) announcement on Blackboard.</p>
 <p>Watch this 2-minute video to see what Slack is all about:</p>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9RJZMSsH7-g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
@@ -724,20 +725,20 @@ div.tocify {
 <p><strong>Asking for help on Slack</strong>:</p>
 <p>You can post questions on slack and receive quick responses. This also enables other students to see answers to common questions. Be specific - if your code has an error you don’t understand, <strong>include the code and the error message</strong> in your question.</p>
 </div>
-<div id="office-hours" class="section level1">
-<h1><span class="header-section-number">2</span> Office hours</h1>
+<div id="office-hours" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Office hours</h1>
 <p>Please watch this video:</p>
 <iframe src="https://player.vimeo.com/video/270014784" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen>
 </iframe>
 <p>Office hours are set times dedicated to all of you. This means that I will be in my office (wistfully) waiting for you to come by with whatever questions you have. This is the best and easiest way to find me outside of class and the best chance for discussing class material and concerns (or anything really). Please come by!</p>
 <p>This can be a difficult class - <strong>do not suffer in silence!</strong> Come talk to me!</p>
 </div>
-<div id="tutoring-hours" class="section level1">
-<h1><span class="header-section-number">3</span> Tutoring hours</h1>
+<div id="tutoring-hours" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Tutoring hours</h1>
 <p>Similar to office hours, your class tutors will each hold a specific period of time each week dedicated to help you will course assignments. Please don’t make your tutors sit and do emails for two hours - come by and ask for help!</p>
 </div>
-<div id="library-services" class="section level1">
-<h1><span class="header-section-number">4</span> Library Services</h1>
+<div id="library-services" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Library Services</h1>
 <p>While the University Library is not a stand in for TAs, you can schedule a consultation for general help with Coding, Programming, Data, Statistical, and GIS. See more at <a href="https://academiccommons.gwu.edu/writing-research-help" class="uri">https://academiccommons.gwu.edu/writing-research-help</a></p>
 </div>
 
