--- a/r8-wtp-simulation.html
+++ b/r8-wtp-simulation.html
@@ -11,8 +11,9 @@
 
 
 
-<title>Uncertainty</title>
+<title>WTP &amp; Simulations</title>
 
+<script src="site_libs/header-attrs-2.10/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -396,13 +397,13 @@ $(document).ready(function () {
       <a href="c8-mle.html">Oct 20: Optimization &amp; MLE</a>
     </li>
     <li>
-      <a href="c9-wtp-simulation.html">Oct 27: WTP &amp; Simulations</a>
+      <a href="c9-uncertainty.html">Oct 27: Uncertainty</a>
     </li>
     <li>
       <a href="c10-doe.html">Nov 03: DOE &amp; Power Analysis</a>
     </li>
     <li>
-      <a href="c12-uncertainty.html">Nov 17: Uncertainty</a>
+      <a href="c12-wtp-simulation.html">Nov 17: WTP &amp; Simulations</a>
     </li>
     <li>
       <a href="c14-heterogeneity.html">Dec 01: Heterogeneity</a>
@@ -437,16 +438,16 @@ $(document).ready(function () {
       <a href="r4-utility-models.html">Oct 06: Utility Models (Due 10/12)</a>
     </li>
     <li>
-      <a href="r5-estimation.html">Oct. 13: Estimation (Due 10/19)</a>
+      <a href="r5-estimation.html">Oct 13: Estimation (Due 10/19)</a>
     </li>
     <li>
-      <a href="r6-wtp-simulation.html">Oct 20: WTP &amp; Simulations (Due 10/26)</a>
+      <a href="r6-uncertainty.html">Oct 20: Uncertainty (Due 10/26)</a>
     </li>
     <li>
       <a href="r7-doe.html">Oct 27: Design of Experiment (Due 11/02)</a>
     </li>
     <li>
-      <a href="r8-uncertainty.html">Nov 10: Uncertainty (Due 11/16)</a>
+      <a href="r8-wtp-simulation.html">Nov 10: WTP &amp; Simulations (Due 11/16)</a>
     </li>
     <li>
       <a href="r9-heterogeneity.html">Nov 17: Heterogeneity (Due 11/30)</a>
@@ -622,7 +623,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Uncertainty</h1>
+<h1 class="title toc-ignore">WTP &amp; Simulations</h1>
 
 </div>
 
