updated class 1 slides using solar demo

--- a/class/1-getting-started/index.html
+++ b/class/1-getting-started/index.html
@@ -513,45 +513,30 @@ class: center
 
 class: center, inverse, middle
 
-# Example:&lt;br&gt;Athletic Sole Insole Sensor
+# Example: _Pocket Charge_
+
+## A Flexible, Portable Solar Charger
 
 ---
 
-class: center
-background-color: #fff
-
-# Product: Electronic Shoe Sensor
-
-&lt;center&gt;
-&lt;img src="images/shoe1.png" width=900&gt;
-&lt;/center&gt;
+background-image: url(images/solar1.png)
+background-size: contain
 
 ---
 
 class: center, middle
 background-color: #fff
 
+### Example survey choice question
+
 &lt;center&gt;
-&lt;img src="images/shoe2.png" width=900&gt;
+&lt;img src="images/solar2.png" width=850&gt;
 &lt;/center&gt;
 
 ---
 
-class: center, middle
-background-color: #fff
-
-&lt;center&gt;
-&lt;img src="images/shoe3.png" width=900&gt;
-&lt;/center&gt;
-
----
-
-class: center, middle
-background-color: #fff
-
-&lt;center&gt;
-&lt;img src="images/shoe4.png" width=900&gt;
-&lt;/center&gt;
+background-image: url(images/solar3.png)
+background-size: contain
 
 ---
 
@@ -671,7 +656,7 @@ class: center, middle, inverse
 ---
 class: inverse
 
-<div class="countdown blink-colon noupdate-15" id="timer_6126b240" style="bottom:0;left:0;font-size:2em;" data-warnwhen="30">
+<div class="countdown blink-colon noupdate-15" id="timer_61293fe1" style="bottom:0;left:0;font-size:2em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -794,7 +779,7 @@ wiki_randomfact()
 ```
 
 ```
-#&gt; [1] "Did you know that on September 17 in 1970 – The Jordanian Army commenced operations to oust Palestinian fedayeen from Jordan, in what became known as Black September (smoke rising above Amman pictured). (Courtesy of Wikipedia)"
+#&gt; [1] "Did you know that on March 10 in 1916 – The last in a series of letters was written, agreeing that Britain would recognise Arab independence in return for the Sharif of Mecca launching a revolt against the Ottoman Empire. (Courtesy of Wikipedia)"
 ```
 
 ---
@@ -836,7 +821,7 @@ wikifacts::wiki_randomfact()
 ```
 
 ```
-#&gt; [1] "Here's some news from 10 May 2019. Judd Trump (pictured) wins the World Snooker Championship, defeating John Higgins in the final. (Courtesy of Wikipedia)"
+#&gt; [1] "Did you know that on April 20 in 1535 – Sun dogs were observed over Stockholm, Sweden, inspiring the painting Vädersolstavlan, the oldest colour depiction of the city. (Courtesy of Wikipedia)"
 ```
 
 ---
