updated proposal rubric

--- a/project/proposal/rubric.html
+++ b/project/proposal/rubric.html
@@ -169,8 +169,8 @@ pre code {
 </div>
 
 
-<div id="rubric-final-project-proposal" class="section level3">
-<h3>Rubric: Final Project Proposal</h3>
+<div id="rubric-project-proposal" class="section level3">
+<h3>Rubric: Project Proposal</h3>
 <div id="emse-6035-marketing-analytics-for-design-decisions-fall-2021" class="section level4">
 <h4>EMSE 6035: Marketing Analytics for Design Decisions, Fall 2021</h4>
 </div>
