--- a/class/6-conjoint-questions/index.html
+++ b/class/6-conjoint-questions/index.html
@@ -70,7 +70,7 @@ class: inverse
 
 # Quiz 2
 
-<div class="countdown" id="timer_615cd307" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
+<div class="countdown" id="timer_615e1841" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -85,6 +85,18 @@ class: inverse
 &lt;img src="images/quiz_doge.png" width="400"&gt;
 &lt;/center&gt;
 ]
+
+---
+
+# Upcoming events
+
+- **Society of Women Engineers (SWE) Conference Boot Camp**:&lt;br&gt;Friday, October 8, 4-5:30 p.m.
+
+- **Virtual Media, Journalism, &amp; Public Affairs Fair**:&lt;br&gt;Oct. 19  Time: 4:30 p.m. - 6 p.m.
+
+- **Fundamentals of Engineering (FE) Exam Prep Workshop**:&lt;br&gt;November 1, 4-5:30 p.m.
+
+- **Virtual Government &amp; Nonprofit Fair**:&lt;br&gt;Nov. 19 Time: 1 p.m. - 4 p.m.
 
 ---
 
@@ -914,7 +926,7 @@ Any combination of attributes can be shown in each choice question
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
   &lt;/tr&gt;
@@ -922,17 +934,17 @@ Any combination of attributes can be shown in each choice question
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
   &lt;/tr&gt;
@@ -952,25 +964,25 @@ Any combination of attributes can be shown in each choice question
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
   &lt;/tr&gt;
@@ -997,18 +1009,18 @@ One attribute is used as the "label" - choice options are fixed according to the
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1025,18 +1037,18 @@ One attribute is used as the "label" - choice options are fixed according to the
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1070,16 +1082,16 @@ An "outside good" means they can choose an "other" option (usually "None")
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
@@ -1106,22 +1118,22 @@ An "outside good" means they can choose an "other" option (usually "None")
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $20 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt;  &lt;/td&gt;
   &lt;/tr&gt;
@@ -1156,7 +1168,7 @@ To implement this, set the attribute to `0` for the non-applicable cases
 
 class: inverse
 
-<div class="countdown" id="timer_615cd401" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_615e1528" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -1245,9 +1257,9 @@ df
 
 ```
 #&gt;   altID price fuelEconomy accelTime powertrain
-#&gt; 1     1    25          20         6   Gasoline
-#&gt; 2     2    25          25         7   Electric
-#&gt; 3     3    15          30         7   Electric
+#&gt; 1     1    15          20         8   Electric
+#&gt; 2     2    25          25         6   Electric
+#&gt; 3     3    15          25         6   Electric
 ```
 
 
@@ -1257,7 +1269,7 @@ df_json
 ```
 
 ```
-#&gt; [{"altID":1,"price":25,"fuelEconomy":20,"accelTime":6,"powertrain":"Gasoline"},{"altID":2,"price":25,"fuelEconomy":25,"accelTime":7,"powertrain":"Electric"},{"altID":3,"price":15,"fuelEconomy":30,"accelTime":7,"powertrain":"Electric"}]
+#&gt; [{"altID":1,"price":15,"fuelEconomy":20,"accelTime":8,"powertrain":"Electric"},{"altID":2,"price":25,"fuelEconomy":25,"accelTime":6,"powertrain":"Electric"},{"altID":3,"price":15,"fuelEconomy":25,"accelTime":6,"powertrain":"Electric"}]
 ```
 
 ---
@@ -1294,10 +1306,10 @@ Use RMarkdown formatting to display content in each alternative
 
 **Option 1**
 
-**Price**: $ 25&lt;br&gt;
-**Powertrain**: $ Gasoline&lt;br&gt;
+**Price**: $ 15&lt;br&gt;
+**Powertrain**: $ Electric&lt;br&gt;
 **Fuel Economy**: 20 mpg&lt;br&gt;
-**0-60 Accel. Time**: 6 s
+**0-60 Accel. Time**: 8 s
 ]
 
 ---
@@ -1344,13 +1356,13 @@ kable(t(alts))
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Powertrain: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; Gasoline &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; Electric &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Price: &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $25 &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; $15 &lt;/td&gt;
   &lt;/tr&gt;
@@ -1358,13 +1370,13 @@ kable(t(alts))
    &lt;td style="text-align:left;"&gt; Fuel Economy: &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 20 (mpg) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 30 (mpg) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 25 (mpg) &lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
    &lt;td style="text-align:left;"&gt; Accel. Time: &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 8 (s) &lt;/td&gt;
    &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
-   &lt;td style="text-align:left;"&gt; 7 (s) &lt;/td&gt;
+   &lt;td style="text-align:left;"&gt; 6 (s) &lt;/td&gt;
   &lt;/tr&gt;
 &lt;/tbody&gt;
 &lt;/table&gt;
@@ -1386,7 +1398,7 @@ class: center
 
 class: inverse
 
-<div class="countdown" id="timer_615cd385" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_615e1830" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
