--- a/class/8-mle/index.html
+++ b/class/8-mle/index.html
@@ -65,7 +65,7 @@ class: inverse
 
 # Quiz 3
 
-<div class="countdown" id="timer_617061f2" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
+<div class="countdown" id="timer_61707bb3" style="bottom:0;left:0;font-size:4em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -269,7 +269,7 @@ Consider the following function:
 
 The gradient is:
 
-`$$\Delta f(x) = 2x - 6$$`
+`$$\nabla f(x) = 2x - 6$$`
 
 Using the starting point `\(x = 1\)` and the step size `\(\gamma =  0.3\)`, apply the gradient descent method to compute the next **three** points in the search algorithm.
 ]
@@ -298,7 +298,7 @@ $$
 The gradient is:
 
 $$
-\Delta f(\underline{x}) =
+\nabla f(\underline{x}) =
 `\begin{bmatrix}
 2x_1
 \\
@@ -353,7 +353,7 @@ class: inverse, center
 
 # .fancy[Break]
 
-<div class="countdown" id="timer_61706265" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;" data-warnwhen="30">
+<div class="countdown" id="timer_61707de7" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -754,7 +754,7 @@ band_members %&gt;%
 ---
 class: inverse
 
-<div class="countdown" id="timer_6170640c" style="top:0;right:0;font-size:2em;" data-warnwhen="30">
+<div class="countdown" id="timer_61707af9" style="top:0;right:0;font-size:2em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
