--- a/class/8-mle/solutions.html
+++ b/class/8-mle/solutions.html
@@ -307,7 +307,7 @@ df %&gt;%
 <p>Consider the following function:</p>
 <p><span class="math display">\[f(x) = x^2 - 6x\]</span></p>
 <p>The gradient is:</p>
-<p><span class="math display">\[\Delta f(x) = 2x - 6\]</span></p>
+<p><span class="math display">\[\nabla f(x) = 2x - 6\]</span></p>
 <p>Using the starting point <span class="math inline">\(x = 1\)</span> and the step size <span class="math inline">\(\gamma = 0.3\)</span>, apply the gradient descent method to compute the next <strong>three</strong> points in the search algorithm.</p>
 <pre class="r"><code># Define the step size and the starting point:
 step &lt;- 0.3
@@ -370,7 +370,7 @@ f(\underline{x}) = x_1^2 + 4x_2^2
 \]</span></p>
 <p>The gradient is:</p>
 <p><span class="math display">\[
-\Delta f(\underline{x}) = 
+\nabla f(\underline{x}) =
 \begin{bmatrix}
 2x_1
 \\ 
