--- a/class/9-uncertainty/index.html
+++ b/class/9-uncertainty/index.html
@@ -61,6 +61,14 @@ class: middle, inverse
 
 ---
 
+# Pilot Analysis Report 
+
+### Assignment is now [posted](https://madd.seas.gwu.edu/2021-Fall/p4-pilot-analysis.html)
+
+### Due 11/07 (that's 10 days from now)
+
+---
+
 # Quick correction from last week
 
 **Observations** - Height of students (inches):
@@ -308,13 +316,13 @@ head(draws)
 ```
 
 ```
-#&gt;            [,1]      [,2]      [,3]
-#&gt; [1,] -0.6946433 0.1206494 -3.973694
-#&gt; [2,] -0.7128098 0.1381762 -3.975379
-#&gt; [3,] -0.6941685 0.1334979 -4.002586
-#&gt; [4,] -0.7166425 0.1122484 -4.079662
-#&gt; [5,] -0.6983785 0.1447645 -4.033314
-#&gt; [6,] -0.7060643 0.1088229 -3.999648
+#&gt;            [,1]       [,2]      [,3]
+#&gt; [1,] -0.7219066 0.12844865 -3.979129
+#&gt; [2,] -0.7056323 0.05400818 -3.990519
+#&gt; [3,] -0.6969429 0.07709515 -4.027605
+#&gt; [4,] -0.7003554 0.07658722 -4.063454
+#&gt; [5,] -0.7061336 0.09679411 -4.110877
+#&gt; [6,] -0.6947397 0.15654305 -3.869518
 ```
 ]
 
@@ -803,7 +811,7 @@ head(fed_spend_long)
 
 class: inverse
 
-<div class="countdown" id="timer_61785592" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_6179a9a9" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -827,7 +835,7 @@ class: inverse, center
 
 # .fancy[Break]
 
-<div class="countdown" id="timer_6178550a" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;" data-warnwhen="30">
+<div class="countdown" id="timer_6179a97d" style="top:1;right:0;bottom:0;left:0;margin:5%;font-size:8em;" data-warnwhen="30">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -873,7 +881,7 @@ class: center
 
 class: inverse
 
-<div class="countdown" id="timer_617855bf" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
+<div class="countdown" id="timer_6179a8a7" style="top:0;right:0;font-size:2em;" data-warnwhen="15">
 <code class="countdown-time"><span class="countdown-digits minutes">20</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
